--- a/stack.yaml
+++ b/stack.yaml
@@ -1,14 +1,14 @@
-resolver: lts-15.1
+resolver: lts-18.28
 
 flags: {}
 
 extra-deps:
   - git: git@github.com:DaisukeBekki/JSeM.git
-    commit: d5705b42006a08aa9dd8d2ea37d29fc7cf5559f6
+    commit: b725e62dd66cbbb4fe891ee84108d7a398f5dd71
   - git: git@github.com:DaisukeBekki/hasktorch-tools.git
     commit: 936928cdee27e179a5e3775d146046b107b0eba1
-  - git: https://github.com/DaisukeBekki/lightblue.git
-    commit: a230595f5e674d0457051322801ba22e94033ec3
+  - git: git@github.com:miyagawananako/lightblue.git
+    commit: 89325dbadbdb9eda1889532b045861b8636e0d5a
   # - /Users/daidohinari/blab/mycode/lightblue
 
 build:
