--- a/stack.yaml
+++ b/stack.yaml
@@ -7,8 +7,8 @@ extra-deps:
     commit: b725e62dd66cbbb4fe891ee84108d7a398f5dd71
   - git: git@github.com:DaisukeBekki/hasktorch-tools.git
     commit: 936928cdee27e179a5e3775d146046b107b0eba1
-  - git: https://github.com/DaisukeBekki/lightblue.git
-    commit: b92288d6b19ec1311e17b206e991d78a0ddb0341
+  - git: git@github.com:miyagawananako/lightblue.git
+    commit: 0a7128d6aba7850ea57a071d17b79e797b366f39
   # - /Users/daidohinari/blab/mycode/lightblue
 
 build:
