--- a/waniTEST.cabal
+++ b/waniTEST.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.36.0.
+-- This file has been generated from package.yaml by hpack version 0.37.0.
 --
 -- see: https://github.com/sol/hpack
 
@@ -35,6 +35,7 @@ library
   build-depends:
       array >=0.5.3.0
     , base >=4.7 && <5
+    , bytestring
     , cmdargs
     , containers >=0.4
     , data-default
@@ -43,6 +44,7 @@ library
     , list-t >=1.0.0.0
     , mtl >=2.2.2
     , split
+    , store
     , text >=1.2
     , time >=1.9.3
   default-language: Haskell2010
@@ -57,6 +59,7 @@ executable waniTEST
   build-depends:
       array >=0.5.3.0
     , base >=4.7 && <5
+    , bytestring
     , cmdargs
     , containers >=0.4
     , data-default
@@ -65,6 +68,7 @@ executable waniTEST
     , list-t >=1.0.0.0
     , mtl >=2.2.2
     , split
+    , store
     , text >=1.2
     , time >=1.9.3
     , waniTEST
